--- a/Krishi Bazaar/server/package.json
+++ b/Krishi Bazaar/server/package.json
@@ -13,8 +13,10 @@
         "bcrypt": "^5.1.0",
         "bcryptjs": "^2.4.3",
         "concurrently": "^8.0.1",
+        "crypto": "^1.0.1",
         "dotenv": "^10.0.0",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
         "mongodb": "^5.3.0",
         "mongoose": "^6.11.1"
     }
