--- a/Krishi Bazaar/client/package.json
+++ b/Krishi Bazaar/client/package.json
@@ -14,8 +14,10 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.0.1",
     "react-scripts": "^4.0.3",
+    "sweetalert2": "^11.7.12",
     "web-vitals": "^1.1.2",
     "webpack": "^4.44.2"
   },
