--- a/Utkarsh Rozgar/server/package.json
+++ b/Utkarsh Rozgar/server/package.json
@@ -18,6 +18,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.0",
         "mongodb": "^5.3.0",
-        "mongoose": "^6.11.1"
+        "mongoose": "^6.11.1",
+        "path": "^0.12.7"
     }
 }
